<resources>
    <string name="app_name">Week2</string>
    <string name="message">Welcome to Android!</string>
    <string name="largetext">Large Text</string>
    <string name="Button2">Button 2</string>
    <string name="Button1">Button 1</string>
    <string name="name">Name:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>

    //Exercise 2
    <string name="Fullname">Full Name:</string>
    <string name="Firstname">First Name</string>
    <string name="Lastname">Last Name</string>
    <string name="Gender">Gender:</string>
    <string name="ID">Student ID:</string>
    <string name="school">School:</string>
    <string name="Email">Email:</string>
    <string name="phone">Phone Number:</string>
    <string name="Register">Register</string>
    <string name="Registerform">Registeration Form</string>
    <string name="welcome">Welcome to RP Programming Club!</string>

</resources>